<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivListPhoto"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginRight="6dip"
        android:scaleType="centerInside"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvNameList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvPurchasedArticles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/purchased_items"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvIsListActive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shopping_list_is_active"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>