<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivArticlePhoto"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginRight="6dip"
            android:scaleType="centerInside" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tvNameArticle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nameArticle"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvCostOfArticle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/costArticle"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cbIsBoughtArticle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bay_this"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>